fixed button visibility when game in play

--- a/main.css
+++ b/main.css
@@ -6,11 +6,21 @@
 
   header {
     text-align: center;
-    font-size: 20px;
+    height: 150px;
     color: darkred;
+  }
+  h1 {
+    font-size: 50px;
+    margin-bottom: 0px;
+  }
+
+  h4 {
+    margin-top: 0px;
+    font-size: 25px;
   }
 
   body {
+    margin-top: 5px;
     height: 100vh;
     width: 100%;
     height: 100%;
@@ -33,8 +43,9 @@
 main > img {
   width: 100%;
   height: 100%;
-  border-radius: 5%;
+  border-radius: 8%;
 }
+
 main > img:hover{
   box-shadow: 0 0 100px darkred; 
 }
